<?xml version="1.0"?>
<package format="2">
  <name>ament_tools</name>
  <version>0.0.0</version>
  <description>The command line tools for the ament buildsystem.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_package</buildtool_depend>
  <buildtool_depend>osrf_pycommon</buildtool_depend>

  <buildtool_export_depend>ament_package</buildtool_export_depend>
  <buildtool_export_depend>osrf_pycommon</buildtool_export_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
